--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 #logging.level.org.springframework=debug
 spring.profiles.active=dev
+
+#management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=health,metrics
